@@ -1,3 +1,8 @@
+Mon 21 Mar 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	Refactor DocumentType and DTD
+
+	* Add unit tests
+
 Sun 20 Mar 2022 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	Add Document
 
